--- a/my-portfolio/src/components/Intro.css
+++ b/my-portfolio/src/components/Intro.css
@@ -17,11 +17,6 @@ section{
  color: #000;
  padding: 2rem;
 
- 
-
- /* box-shadow:  0 1px 2px 0 rgba(88, 99, 33, 0.2); */
-
- 
 }
 .intro h1{
     font-size: 3rem;
@@ -29,7 +24,7 @@ section{
 
 }
 .intro h2{
-    font-size: 32px;
+    font-size: 2rem;
     font-weight: 600;
     margin-bottom: 1rem;
 }
@@ -39,9 +34,7 @@ section{
     line-height: 1.5;
    opacity: 0.7;
 }
-.me{
-    
-}
+
 .intro button{
     padding: 8px 14px;
     font-size: 21px;
@@ -70,4 +63,35 @@ section{
     font-size: 30px;
     padding: 8px;
    
+}
+
+@media (max-width:750px) {
+    section{
+        display: grid;
+        grid-template-columns:1fr;
+        text-align: center;
+        padding: 0;
+    }
+    .intro{
+        padding: 1rem;
+    }
+    .intro h1{
+        font-size: 2.9rem;
+    }
+    .intro h2{
+        font-size: 1.8rem;
+        font-weight: 400;
+    }
+    .intro p{
+        font-size: 20px;
+        line-height: 1.5;
+    }
+    .social-icons a{
+        padding: 5px;
+        font-size: 33px;
+    }
+    .my-image{
+    margin: 10px;
+    }
+    
 }
