--- a/my-portfolio/src/components/navbar.css
+++ b/my-portfolio/src/components/navbar.css
@@ -16,8 +16,9 @@
   margin: 0;
   
 }
+
 .navlinks li{
-  font-size: 24px;
+  /* font-size: 24px; */
 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 transition: color 0.3s ease;
 cursor: pointer;
@@ -32,14 +33,24 @@ cursor: pointer;
 .nav-menu{
   display: none;
 }
-@media (max-width:768px) {
+.links{
+  text-decoration: none;
+  color: #333;
+    font-size: 24px;
+}
+@media (max-width:580px) {
   .nav-menu{
     display: block;
    
   }
   .navlinks{
      display: none;
-   
+     flex-direction: column;
+      background-color: #fff;
+  padding: 10px;
+ justify-content: center;
+ align-items: center;
+
   }
   .show{
     display: flex;
