--- a/my-portfolio/src/components/skills.css
+++ b/my-portfolio/src/components/skills.css
@@ -1,9 +1,96 @@
 .skills-container{
-    padding: 2rem;
-    text-align: center;
-}
-.grip-line{
-    color: #e4721c;
-    font-size: 30px;
+  padding: 2rem;
+  max-width: 1200px;
+  margin: 20px 0;
+  /* background-color: #eeeeee; */
+  
+  
  
+}
+.skills-content{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+   flex-direction: column;
+}
+.skills-container h2{
+    font-size: 40px;
+  color: #e4721c;
+  /* white-space: nowrap; */
+  font-family: monospace;
+}
+.skills-container p{
+    font-size: 20px;
+  color: #000;
+  line-height: 1.4;
+  opacity: 0.8;
+  /* text-align: center; */
+  max-width: 80%;
+  /* padding: 15px; */
+}
+.simple-line{
+    margin: 0;
+}
+.skills-card{
+ background-color: #eee;
+  display: grid;
+ grid-template-columns: repeat(3,4fr);
+  gap: 20px;
+
+}
+.skill-card h3{
+    font-size: 21px;
+    line-height: 1.4;
+    color: #333;
+}
+.skill-card p{
+    font-size: 18px;
+    opacity: 0.6;
+    line-height: 1.4;
+    padding: 5px;
+}
+.card-icon{
+    color: #e4721c;
+    font-size: 40px;
+}
+.skill-card{
+  background-color: #fff;
+  /* text-align: center; */
+  padding: 1rem;
+ box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+  transition: transform 0.2s ease;
+   margin: 20px 10px;
+   border-radius: 5px;
+    
+}
+.skill-card:hover {
+  transform: translateY(-5px);
+ 
+}
+@media (max-width:980px) {
+    .skills-card{
+        display: grid;
+        grid-template-columns: 1fr;
+       
+    }
+    .skill-card{
+        text-align: center;
+    }
+    .skill-card p{
+        font-size: 14px;
+        line-height: 1.2;
+        padding: 6px;
+    }
+    .skill-card h3{
+        font-size: 20px;
+    }
+    .skills-container h2{
+        font-size: 28px;
+    }
+    .skills-container p{
+        font-size: 16px;
+        line-height: 1.2;
+    }
+
+    
 }
