--- a/my-portfolio/src/components/skills.css
+++ b/my-portfolio/src/components/skills.css
@@ -18,6 +18,7 @@
   color: #e4721c;
   /* white-space: nowrap; */
   font-family: monospace;
+   margin-bottom: 0.3rem;
 }
 .skills-container p{
     font-size: 20px;
@@ -27,15 +28,20 @@
   /* text-align: center; */
   max-width: 80%;
   /* padding: 15px; */
+   margin-top: 0.3rem;
 }
 .simple-line{
-    margin: 0;
+   height: 3px;
+  width: 90px;
+background-color: #000;
+  margin: 10px 0;
 }
 .skills-card{
  background-color: #eee;
   display: grid;
  grid-template-columns: repeat(3,4fr);
   gap: 20px;
+  padding: 0 1rem;
 
 }
 .skill-card h3{
@@ -44,10 +50,11 @@
     color: #333;
 }
 .skill-card p{
-    font-size: 18px;
-    opacity: 0.6;
-    line-height: 1.4;
-    padding: 5px;
+  font-size: 18px;
+    line-height: 1.5;
+    padding: 10px 5px;  
+    margin: 0 auto;
+    /* text-align: center; */
 }
 .card-icon{
     color: #e4721c;
@@ -55,12 +62,12 @@
 }
 .skill-card{
   background-color: #fff;
-  /* text-align: center; */
-  padding: 1rem;
+  text-align: center;
  box-shadow: 0 4px 12px rgba(0,0,0,0.08);
   transition: transform 0.2s ease;
-   margin: 20px 10px;
+   margin: 12px;
    border-radius: 5px;
+ 
     
 }
 .skill-card:hover {
