--- a/my-portfolio/src/components/skills.css
+++ b/my-portfolio/src/components/skills.css
@@ -84,9 +84,9 @@ background-color: #000;
         text-align: center;
     }
     .skill-card p{
-        font-size: 14px;
-        line-height: 1.2;
-        padding: 6px;
+        font-size: 16px;
+        line-height: 1.4;
+        padding: 10px 7px;
     }
     .skill-card h3{
         font-size: 20px;
@@ -96,7 +96,10 @@ background-color: #000;
     }
     .skills-container p{
         font-size: 16px;
-        line-height: 1.2;
+        line-height: 1.4;
+        max-width: 90%;
+        padding: 5px;
+        /* margin-bottom: .4rem; */
     }
 
     
