--- a/my-portfolio/src/components/skills.css
+++ b/my-portfolio/src/components/skills.css
@@ -23,7 +23,7 @@
 .skills-container p{
     font-size: 20px;
   color: #000;
-  line-height: 1.4;
+  line-height: 1.8;
   opacity: 0.8;
   /* text-align: center; */
   max-width: 80%;
@@ -74,6 +74,50 @@ background-color: #000;
   transform: translateY(-5px);
  
 }
+.soft-skills{
+  display: flex;
+  justify-content: space-between;
+  /* align-items: flex-start; */
+  gap: 20px;
+  margin: 20px auto;
+  padding: 1rem;
+  max-width: 900px;
+  flex-wrap: wrap;
+
+}
+.soft-skills h2{
+  font-size: 28px;
+}
+.soft-skills p{
+  font-size: 18px;
+  line-height: 2;
+  max-width: 400px;
+  color: #333;
+}
+.seperate-line{
+  /* border: 2px solid #e4721c; */
+  width: 2px;
+  background-color: #e4721c;
+  height: 150px;
+
+
+}
+.soft-skill h4 {
+  font-size: 22px;
+  color: #333;
+  margin-bottom: 10px;
+}
+
+.soft-skill ul {
+  /* list-style: none; */
+  /* padding-left: 70px; */
+}
+
+.soft-skill ul li {
+  font-size: 18px;
+  margin-bottom: 8px;
+  color: #444;
+}
 @media (max-width:980px) {
     .skills-card{
         display: grid;
@@ -104,3 +148,42 @@ background-color: #000;
 
     
 }
+@media (max-width:979px) {
+  .seperate-line{
+    display: none;
+  }
+  .soft-skills{
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 10px;
+
+  }
+  /* .soft-skill ul{
+    list-style: none;
+  } */
+  
+}
+@media (max-width: 768px) {
+  .soft-skills {
+    flex-direction: column;
+    align-items: center;
+    /* text-align: center; */
+  }
+
+  .seperate-line {
+    display: none;
+  }
+}
+@media (max-width:460px) {
+  .soft-skill h2{
+    font-size: 21px;
+   
+  }
+  .soft-skills p{
+    /* font-size: 15px; */
+    line-height: 1.9;
+    max-width: 550px;
+  }
+  
+}
+
