--- a/my-portfolio/src/components/skills.css
+++ b/my-portfolio/src/components/skills.css
@@ -135,9 +135,9 @@ background-color: #000;
 
 }
 .qualifications-intro p{
-  line-height: 1.5;
+  line-height: 1.6;
   font-size: 18px;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
 
 }
 .certificate-grid{
@@ -163,9 +163,11 @@ background-color: #000;
   font-size: 20px;
   color: #222;
 }
-.certificate-card p{
+.certificate-grid .certificate-card p{
   font-size: 16px;
   color: #333;
+  max-width: 300px;
+  
 }
 @keyframes popIn {
   0% {
@@ -180,6 +182,17 @@ background-color: #000;
     opacity: 1;
     transform: scale(1);
   }
+}
+ button{
+  padding: 8px 14px;
+  font-size: 21px;
+  background-color:#e4721c;
+  border: none;
+  border-radius: 4px;
+  /* margin-right: 20px; */
+  color: aliceblue;
+ 
+
 }
 
   
