--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -133,4 +133,76 @@ font-family: 'Courier New', Courier, monospace;
     }
     
   }
+   /* Projects page style */
+   /* .img-clock{
+    width: 240px;
+   } */
   
+   .projects-container{
+    padding: 1rem 2rem;
+    max-width: 100%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    /* max-height: 100vh;
+  overflow-y: auto; */
+    
+
+   }
+   .projects-container h2{
+    font-size: 28px;
+    color: #e4721c;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 700;
+   }
+   .projects-container p{
+    font-size: 19px;
+    line-height: 1.8;
+    max-width: 800px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    /* padding: 5px; */
+  
+   }
+   .project-grid{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 2rem;
+    margin-top: 2rem;
+    width: 100%;
+   }
+   .project-grid img{
+    width: 100%;
+  height: auto;
+  max-height: 200px;
+  object-fit: cover;
+   }
+   .project-card {
+    background: #ededed;
+    padding: 1rem;
+    border-radius: 10px;
+    text-align: left;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  }
+  .project-card h3 {
+    font-size: 22px;
+  color: #e4721c;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: 600;
+  margin-bottom: 0.5rem;
+  }
+  .project-links {
+    margin: 1rem 0;
+  }
+
+  .project-links a {
+    display: inline-block;
+    margin-right: 1rem;
+    padding: 8px 16px;
+    background-color: #e4721c;
+    color: #fff;
+    border-radius: 5px;
+    text-decoration: none;
+    transition: background 0.3s;
+  }
