--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -85,8 +85,7 @@ font-family: 'Courier New', Courier, monospace;
     font-size: 18px;
     line-height: 1.9;
     padding: 12px;
-   opacity: 0.8;
-   font-family: 'Times New Roman', Times, serif;
+   font-family: Georgia, 'Times New Roman', Times, serif;
 }
 .centered-page ul{
     list-style: none;
@@ -124,6 +123,7 @@ font-family: 'Courier New', Courier, monospace;
     /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
     /* padding: 5px; */
    }
+   
     
   }
   @media (max-width:400px) {
@@ -160,6 +160,7 @@ font-family: 'Courier New', Courier, monospace;
    .projects-container p{
     font-size: 19px;
     line-height: 1.8;
+    text-align: center;
     max-width: 800px;
     font-family: Georgia, 'Times New Roman', Times, serif;
     /* padding: 5px; */
@@ -168,16 +169,22 @@ font-family: 'Courier New', Courier, monospace;
    .project-grid{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 2rem;
+    gap: 1rem;
     margin-top: 2rem;
     width: 100%;
    }
-   .project-grid img{
+   .project-card img{
     width: 100%;
-  height: auto;
-  max-height: 200px;
-  object-fit: cover;
+    object-fit: cover;
+   
+  height: 200px;
+  border-radius: 5px;
+  transition: all 0.5s ease;
    }
+   .project-card img:hover{
+    transform: scale(1.05) rotate(2deg);
+   }
+  
    .project-card {
     background: #ededed;
     padding: 1rem;
@@ -192,17 +199,71 @@ font-family: 'Courier New', Courier, monospace;
   font-weight: 600;
   margin-bottom: 0.5rem;
   }
-  .project-links {
-    margin: 1rem 0;
+  .project-card p{
+    margin-top: 1rem;
+    background-color: #fff;
+    font-size: 17px;
+    /* line-height: 1.8; */
+    padding: 7px 10px;
   }
-
+  .project-links {
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+    gap: 19px; 
+    margin: 20px auto;
+    flex-wrap: wrap; 
+    border: none;
+  }
+  
   .project-links a {
-    display: inline-block;
-    margin-right: 1rem;
-    padding: 8px 16px;
+    padding: 10px 14px;
+    min-width: 100px;
     background-color: #e4721c;
     color: #fff;
-    border-radius: 5px;
+    border-radius: 6px;
+    text-align: center;
     text-decoration: none;
-    transition: background 0.3s;
+    transition: background-color 0.3s ease;
+  }
+  
+  .project-links a:hover {
+    background-color: #cf6512;
+  }
+  @media (max-width:430px) {
+    .projects-container{
+      padding: 0.8rem;
+    }
+    .projects-container h2{
+      font-size: 24px;
+
+    }
+    .projects-container p{
+      /* max-width: 400px; */
+      line-height: 1.7;
+      font-size: 16px;
+      text-align: center;
+    }
+    .project-card p{
+      padding: 7px;
+    }
+    .project-grid{
+      margin-top: 1rem;
+    }
+    .project-card img{
+      object-fit: cover;
+      height: 150px;
+    }
+    
+  }
+  @media (max-width:365px) {
+    .projects-container h2{
+      font-size: 22px;
+    }
+    .projects-container p{
+      font-size: 15px;
+      list-style: 1.5;
+    }
+
+    
   }
