added contact page

--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -115,7 +115,7 @@ font-family: 'Courier New', Courier, monospace;
       
     }
    .centered-page h2{
-    font-size: 21px;
+    font-size: 24px;
    }
    .centered-page p{
     font-size: 16px;
@@ -267,3 +267,51 @@ font-family: 'Courier New', Courier, monospace;
 
     
   }
+
+  /* contact page style */
+  form{
+    max-width: 600px;
+    margin: 2rem auto;
+    padding: 2rem;
+    background: #fff;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+    display: flex;
+    flex-direction: column;
+    gap: 1.2rem;
+  
+  }
+  form input,form textarea{
+    width: 100%;
+  padding: 12px 15px;
+  font-size: 18px;
+  border: 1.5px solid #ccc;
+  border-radius: 8px;
+  transition: border 0.3s, box-shadow 0.3s;
+font-family: 'Times New Roman', Times, serif;
+    
+  }
+  form input:focus,
+form textarea:focus {
+  border-color: #e4721c;
+  outline: none;
+}
+form textarea {
+  resize: vertical;
+  min-height: 120px;
+}
+
+form input[type="submit"] {
+  background-color: #e4721c;
+  color: #fff;
+  font-size: 17px;
+  border: none;
+  padding: 12px;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: background 0.3s;
+}
+
+form input[type="submit"]:hover {
+  background-color: #cf640f;
+}
