--- a/my-portfolio/src/components/skills.css
+++ b/my-portfolio/src/components/skills.css
@@ -21,12 +21,13 @@
    margin-bottom: 0.3rem;
 }
 .skills-container p{
-    font-size: 20px;
+    font-size: 22px;
   color: #000;
   line-height: 1.8;
   opacity: 0.8;
-  /* text-align: center; */
-  max-width: 80%;
+  text-align: center;
+  font-family: 'Times New Roman', Times, serif;
+  max-width: 85%;
   /* padding: 15px; */
    margin-top: 0.3rem;
 }
@@ -50,7 +51,7 @@ background-color: #000;
     color: #333;
 }
 .skill-card p{
-  font-size: 18px;
+  font-size: 17px;
     line-height: 1.5;
     padding: 10px 5px;  
     margin: 0 auto;
@@ -89,10 +90,12 @@ background-color: #000;
   font-size: 28px;
 }
 .soft-skills p{
-  font-size: 18px;
-  line-height: 2;
-  max-width: 400px;
-  color: #333;
+  font-size: 20px;
+  line-height: 1.8;
+  max-width: 500px;
+  font-family: 'Times New Roman', Times, serif;
+  text-align: center;
+ 
 }
 .seperate-line{
   /* border: 2px solid #e4721c; */
@@ -135,9 +138,10 @@ background-color: #000;
 
 }
 .qualifications-intro p{
-  line-height: 1.6;
-  font-size: 18px;
-  margin-bottom: 2rem;
+  line-height: 1.8;
+ max-width: 850px;
+  font-size: 21px;
+  margin-bottom: 1.4rem;
 
 }
 .certificate-grid{
@@ -266,7 +270,7 @@ background-color: #000;
     font-size: 18px;
   }
   .certificate-card p{
-    line-height: 2;
+    line-height: 1.6;
     font-size: 17px;
   }
 }
